<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carView_signOut"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_your_password"
                    android:textColor="@color/colorBlack"
                    android:textSize="21sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:id="@+id/textViewConfirmPassword"
                    />

                <EditText
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_password_confirmPasswordDialog"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_below="@+id/textViewConfirmPassword"/>


                <android.support.v7.widget.AppCompatButton
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/cancel"
                    android:layout_below="@+id/editText_password_confirmPasswordDialog"
                    android:background="@drawable/white_rounded_button"
                    android:layout_marginTop="15dp"
                    android:id="@+id/btnCancel_confirmPassword"
                    android:layout_alignStart="@+id/textViewConfirmPassword"/>


                <android.support.v7.widget.AppCompatButton
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/confirm"
                    android:layout_below="@+id/editText_password_confirmPasswordDialog"
                    android:background="@drawable/white_rounded_button"
                    android:layout_marginTop="15dp"
                    android:id="@+id/btnConfirm_confirmPassword"
                    android:layout_alignEnd="@+id/textViewConfirmPassword"/>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>