<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relLayout_container_login"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linLayout_container_login"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:src="@drawable/instagram_logo"
            android:layout_gravity="center"
            android:contentDescription="@string/instagram_logo"
            android:id="@+id/instagramLogo_login"/>


        <!--************************ Email ************************-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextInput_login"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">


            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText_login"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>


        </android.support.design.widget.TextInputLayout>
        <!--************************ END OF Email ************************-->


        <!--************************ Password ************************-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextInput_login"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:passwordToggleEnabled="true">


            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEditText_login"
                android:hint="@string/password"
                android:inputType="textPassword"/>


        </android.support.design.widget.TextInputLayout>
        <!--************************ END OF Password ************************-->


        <!--************************ Login Button ************************-->
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton_login"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_rounded_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <!--************************ END OF Login Button ************************-->


        <!--************************ No Account ************************-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noaccount_createone"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorBlue_800"
            android:padding="10dp"
            android:id="@+id/noAccount_login"/>
        <!--************************ END OF No Account ************************-->

    </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linLayout_container_login"/>

</RelativeLayout>